kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare-exchange
  labels:
    name: healthcare-exchange
    compliance.hde.local/data-classification: regulated
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
